fix(cassandra): make 3.11 (Java 8) actually boot; avoid AxonOps namespace clash
Validated a real Cassandra 3.11.17 converge in Docker (colima); the node now
reaches UP/NORMAL and serves CQL on 9042. Fixes found in the process:

- Rename helper module AxonOps::CassandraVersion -> AxonOpsCassandra. The
  cookbook already defines `class AxonOps` (libraries/axonops.rb), so opening
  it as a module raised 'AxonOps is not a module' at compile.
- cassandra-env.sh: only emit the Java 11+ -Xlog:gc unified-logging flag for
  Java 11+. On 3.11 (Java 8) the JVM rejects -Xlog and fails to start; GC
  logging there is configured via jvm.options.
- cassandra-env.sh: resolve the jamm javaagent jar with a glob instead of
  hardcoding jamm-0.4.0.jar (3.11 ships jamm-0.3.0), which broke JVM init.
- cassandra-jvm.options (3.x): drop the empty -XX:MaxDirectMemorySize= option,
  which the JVM rejects.
- Pass java_major into the cassandra-env template to drive the gating.

Refs #19 #20 #22 #28

Signed-off-by: Sergio Rua <sergio@axonops.com>