@@ -39,6 +39,18 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
   and `cassandra-default` (5.0) suites; plus runnable RSpec unit specs for the
   version library and the 3.11 template render.
 
+Fixed (found while validating a real 3.11 converge in Docker — Java 8
+incompatibilities in the shared templates):
+- `cassandra-env.sh` only appends the Java 11+ `-Xlog:gc` unified-logging flag
+  when running Java 11+; on 3.11 (Java 8) GC logging comes from `jvm.options`.
+- Removed the empty `-XX:MaxDirectMemorySize=` from the 3.x `jvm.options`
+  template (an empty value is rejected by the JVM and prevented startup).
+- Resolve the `jamm` javaagent jar dynamically in `cassandra-env.sh` instead of
+  hardcoding `jamm-0.4.0.jar` (3.11 ships `jamm-0.3.0`).
+- Renamed the helper module to `AxonOpsCassandra` to avoid colliding with the
+  existing `class AxonOps` in `libraries/axonops.rb`.
+- Fixed a Ruby syntax error in `recipes/chef_workstation.rb` (`command if …`).
+
 **Reason**: The Cassandra recipe only supported tarball installs of 5.x with
 hardcoded Java 17, a single non-version-specific template, and a broken 4.x
 path. This brings it toward parity with the AxonOps Ansible role and adds 3.11.
